testsuite/gsksl/errors/initialize-global-const.frag
const int x;

void
main ()
{
}
